// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App route should be a function returning a route 1`] = `
<Route
  component={[Function]}
>
  <Route
    component={[Function]}
  >
    <Redirect
      from="/"
      to="balances"
    />
    <Route
      path="balances"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path="details"
      />
      <Route
        component={[Function]}
        path="future"
      />
      <Route
        component={[Function]}
        path=":accountOrGroupId/:page"
      />
    </Route>
    <Route
      path="categories"
    >
      <Redirect
        from="*"
        to="analysis/categories"
      />
    </Route>
    <Route
      path="recurrence"
    >
      <Redirect
        from="*"
        to="analysis/recurrence"
      />
    </Route>
    <Route
      component={[Function]}
      path="analysis"
    >
      <Route
        path="categories"
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path=":categoryName/:subcategoryName"
        />
        <Route
          component={[Function]}
          path=":categoryName"
        />
      </Route>
      <Route
        path="recurrence"
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path=":bundleId"
        />
      </Route>
    </Route>
    <Route
      path="settings"
    >
      <Route
        component={[Function]}
        path="groups/new"
      />
      <Route
        component={[Function]}
        path="groups/:groupId"
      />
      <Redirect
        from="accounts/:accountId"
        to="accounts"
      />
      <Route
        component={[Function]}
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={
            Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "type": [Function],
            }
          }
          path="accounts"
        />
        <Route
          component={[Function]}
          path="groups"
        />
        <Route
          component={[Function]}
          path="tags"
        />
        <Route
          component={[Function]}
          path="configuration"
        />
      </Route>
    </Route>
    <Route
      component={[Function]}
      path="tag/:tagId"
    />
    <Route
      component={[Function]}
      path="transfers"
    />
    <Route
      component={[Function]}
      path="search"
    />
    <Route
      component={[Function]}
      path="search/:search"
    />
    <Route
      component={[Function]}
      path="recurrencedebug"
    />
    <Redirect
      from="*"
      to="balances"
    />
  </Route>
</Route>
`;

exports[`App route should have renderExtraRoutes 1`] = `
<Route
  component={[Function]}
>
  <Route
    component={[Function]}
  >
    <Redirect
      from="/"
      to="balances"
    />
    <Route
      path="balances"
    >
      <IndexRoute
        component={[Function]}
      />
      <Route
        component={[Function]}
        path="details"
      />
      <Route
        component={[Function]}
        path="future"
      />
      <Route
        component={[Function]}
        path=":accountOrGroupId/:page"
      />
    </Route>
    <Route
      path="categories"
    >
      <Redirect
        from="*"
        to="analysis/categories"
      />
    </Route>
    <Route
      path="recurrence"
    >
      <Redirect
        from="*"
        to="analysis/recurrence"
      />
    </Route>
    <Route
      component={[Function]}
      path="analysis"
    >
      <Route
        path="categories"
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path=":categoryName/:subcategoryName"
        />
        <Route
          component={[Function]}
          path=":categoryName"
        />
      </Route>
      <Route
        path="recurrence"
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={[Function]}
          path=":bundleId"
        />
      </Route>
    </Route>
    <Route
      path="settings"
    >
      <Route
        component={[Function]}
        path="groups/new"
      />
      <Route
        component={[Function]}
        path="groups/:groupId"
      />
      <Redirect
        from="accounts/:accountId"
        to="accounts"
      />
      <Route
        component={[Function]}
      >
        <IndexRoute
          component={[Function]}
        />
        <Route
          component={
            Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "type": [Function],
            }
          }
          path="accounts"
        />
        <Route
          component={[Function]}
          path="groups"
        />
        <Route
          component={[Function]}
          path="tags"
        />
        <Route
          component={[Function]}
          path="configuration"
        />
      </Route>
    </Route>
    <Route
      component={[Function]}
      path="tag/:tagId"
    />
    <Route
      component={[Function]}
      path="transfers"
    />
    <Route
      component={[Function]}
      path="search"
    />
    <Route
      component={[Function]}
      path="search/:search"
    />
    <Route
      component={[Function]}
      path="recurrencedebug"
    />
    <Route
      component={[Function]}
      path="extra-route"
    />
    <Redirect
      from="*"
      to="balances"
    />
  </Route>
</Route>
`;
